--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #cfc5af;
+  background: white;
 }
 
 .login-card {
