--- a/src/app/sign-up/sign-up.html
+++ b/src/app/sign-up/sign-up.html
@@ -1,36 +1,36 @@
 <div class="signup-container">
   <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-    <mat-form-field appearance="outline" class="full-width">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Username</mat-label>
       <input matInput formControlName="username">
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="full-width">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Password</mat-label>
       <input matInput type="password" formControlName="password">
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="full-width">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Email</mat-label>
       <input matInput formControlName="email">
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="full-width">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>First Name</mat-label>
       <input matInput formControlName="firstName">
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="full-width">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Last Name</mat-label>
       <input matInput formControlName="lastName">
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="full-width">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Phone Number</mat-label>
       <input matInput formControlName="phoneNumber">
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="full-width">
+    <mat-form-field appearance="fill" class="full-width">
       <mat-label>Date of Birth</mat-label>
       <input matInput [matDatepicker]="picker" formControlName="dateOfBirth">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
