Add business service screen

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -63,7 +63,7 @@
 
               <div class="price-section">
                 <span class="price">
-                  ${{ service.price | number:'1.2-2' }}
+                  €{{ service.price | number:'1.2-2' }}
                 </span>
               </div>
             </div>
