Add filter logic

--- a/src/app/business-service/business-service.html
+++ b/src/app/business-service/business-service.html
@@ -42,8 +42,8 @@
         <div class="author-info">
           <mat-icon class="author-icon">person</mat-icon>
           <div class="author-details">
-            <h3>{{ getFullName(service.user) }}</h3>
-            <p class="username">{{ service.user.username }}</p>
+            <h3>{{ service.user.username }}</h3>
+            <p class="username">{{ getFullName(service.user) }}</p>
           </div>
         </div>
       </mat-card-content>
