--- a/src/app/top-bar/top-bar.html
+++ b/src/app/top-bar/top-bar.html
@@ -1,13 +1,13 @@
 <mat-toolbar class="custom-toolbar" >
   <span class="brand">🎭 Talent Finder</span>
   <span class="spacer"></span>
-  <button mat-raised-button class="add-service-button" *ngIf="isLogged()">
+  <button mat-raised-button class="add-service-button" routerLink="/create" *ngIf="isLogged()">
     <mat-icon>add</mat-icon>
     Add Service
   </button>
-<!--  <button mat-button class="custom-button" routerLink="/">Home</button>-->
+  <button mat-button class="custom-button" routerLink="/">Home</button>
   <button mat-button class="custom-button" routerLink="/login" *ngIf="!isLogged()">Login</button>
   <button mat-button class="custom-button" routerLink="/sign-up" *ngIf="!isLogged()">Sign Up</button>
-  <button mat-button class="custom-button" (click)="logout()" *ngIf="isLogged()">My Profile</button>
+  <button mat-button class="custom-button" *ngIf="isLogged()">My Profile</button>
   <button mat-button class="custom-button" (click)="logout()" *ngIf="isLogged()">Log Out</button>
 </mat-toolbar>
